Introducing SCRAM/SASL authentication (#96) (#97)
* Introducing SCRAM/SASL authentication (#96)

* Adding NOTICE file and respective licenses

* Adding lombok.config

* Adding Scram/Sasl authentication, removing Java Sockets client in favour of a Netty based client, and using @Slf4j for injecting logger into classes.

* Using Java 21

* Update maven.yml

Signed-off-by: Rafael Silvério <rafael.silverio11@gmail.com>

* Bumping versions of JUnit, Jackson, Logback, Netty, Fury and Jakarta.

---------

Signed-off-by: Rafael Silvério <rafael.silverio11@gmail.com>